--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
         <div class="copyright-section">
             <div class="container">
                 <div class="col-md-12">
-                    <div class="copytext text-center">&copy; Conference. All rights reserved | Design By: <a href="https://uicookies.com">uiCookies</a></div>
+                    <div class="copytext text-center">&copy; Conference. All rights reserved | Design By: <a href="https://uicookies.com">pesce mandya</a></div>
                 </div>
             </div>
             <!-- .container -->
